Added task interface
